Update ItemControllerTest.java